@@ -1,5 +1,6 @@
 Changes for 1.8.4rc1
 
+ - [ZBX-3027] avg, delta, max, min, sum functions in popup_trexpr.php have a time shift input, so that this parameter now can be specified through GUI (KB)
  - [ZBX-2827] added checks when adding or updating maintenances, so that duplicate names could not be added (KB)
  - [ZBX-2978] fixed graphs import with Y axis set to an item (Vedmak)
  - [ZBX-2507] minimal graph dimension size is set to 20 pixels (Vedmak)
